tests/transpiler/x/fortran/match_expr.error
error[I008]: cannot apply operator '==' to types null and null
  --> /workspace/mochi/tests/vm/valid/match_expr.mochi:4:3

  4 |   1 => "one"
    |   ^

help:
  Use compatible types for the operator.